@@ -47,6 +47,8 @@ is_filelist(
     t/basic.t
     MANIFEST
     inc/Foo.pm inc/Foo/Bar.pm
+    bin/another_perl_script
+    bin/test.bash
     bin/test.pl
   ) ],
   "GatherDir gathers all files in the source dir",
@@ -90,9 +92,21 @@ $files = $tzil->find_files(':ExecFiles');
 is_filelist(
   [ map {; $_->name } @$files ],
   [ qw(
+    bin/another_perl_script
+    bin/test.bash
     bin/test.pl
   ) ],
   "ExecFiles finds all files",
+);
+
+$files = $tzil->find_files(':PerlExecFiles');
+is_filelist(
+  [ map {; $_->name } @$files ],
+  [ qw(
+    bin/another_perl_script
+    bin/test.pl
+  ) ],
+  "PerlExecFiles finds exec files that are perl",
 );
 
 $files = $tzil->find_files(':ShareFiles');
